ui + http mocks (in progress)

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -19,12 +19,13 @@
   </head>
   <div class="menu-hider"></div>
   <body class="theme-dark" data-highlight="highlight-red" data-gradient="body-default">
-    <div id="preloader" class="preloader-hide">
+    <div id="preloader">
       <div class="spinner-border color-highlight" role="status"></div>
     </div>
 
     <div id="page"></div>
 
     <script type="text/javascript" src="%PUBLIC_URL%/stickymobile/scripts/bootstrap.min.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/stickymobile/scripts/custom.js"></script>
   </body>
 </html>
